--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ xmlns:m="http://schemas.microsoft.com/office/2004/12/omml"
 xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
+<html lang="he-IL" dir="rtl">
 <meta http-equiv=Content-Type content="text/html; charset=windows-1255">
 <meta name=ProgId content=Word.Document>
 <meta name=Generator content="Microsoft Word 15">
