--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
 	unicode-bidi:embed;
 	font-size:11.0pt;
 	font-family:"Calibri",sans-serif;}
-a:link, span.MsoHyperlink
-	{color:#0563C1;
-	text-decoration:underline;}
 .MsoChpDefault
 	{font-size:10.0pt;
 	font-family:"Calibri",sans-serif;}
@@ -44,8 +41,10 @@ div.WordSection1
 
 <div class=WordSection1 dir=RTL>
 
-<p class=MsoNormal dir=RTL><span lang=HE style='font-family:"Times New Roman",serif'><a
-href="https://d-15.winudf.com/b/APK/Y29tLndhemVfMTAyMjgxNF8yOTJlMThjZg?_fn=V2F6ZSBOYXZpZ2F0aW9uIExpdmUgVHJhZmZpY192NC44Ni4wLjZfYXBrcHVyZS5jb20uYXBr&amp;_p=Y29tLndhemU&amp;am=SSMKw4T5i5zlApyakycrig&amp;at=1661291188&amp;download_id=otr_1815804945408780&amp;k=dadb9ee33fc3464d8d228d05f018503963069c3a&amp;r=https%3A%2F%2Fapkpure.com%2Fwaze-navigation-live-traffic%2Fcom.waze">וייז</a></span></p>
+<p class=MsoNormal dir=RTL><a
+href="https://d-15.winudf.com/b/APK/Y29tLndhemVfMTAyMjgxNF8yOTJlMThjZg?_fn=V2F6ZSBOYXZpZ2F0aW9uIExpdmUgVHJhZmZpY192NC44Ni4wLjZfYXBrcHVyZS5jb20uYXBr&amp;_p=Y29tLndhemU&amp;am=SSMKw4T5i5zlApyakycrig&amp;at=1661291188&amp;download_id=otr_1815804945408780&amp;k=dadb9ee33fc3464d8d228d05f018503963069c3a&amp;r=https%3A%2F%2Fapkpure.com%2Fwaze-navigation-live-traffic%2Fcom.waze"><img
+border=0 width=183 height=52 src="index.files/image001.png" align=right
+hspace=12 alt=וייז></a></p>
 
 </div>
 
