--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="he-IL" dir="rtl">
 <head>
 	<meta charset="utf-8" />
-	<title>יצחק אפליקציות</title>
-	<meta name="description" content="בנית אפליקציות" />
+	<title>התקנת יישומי סוכרת</title>
+	<meta name="description" content="סוכרת" />
 	<meta name="viewport" content="width=device-width">
 	<meta name="format-detection" content="telephone=no" />
 	<link rel="shortcut icon" href="https://github.com/yitzhakapps/yitzhakapps.github.io/blob/main/ICON/storshkoof.png?raw=true"/>
@@ -66,7 +66,7 @@ function findString (str) {
 	cursor:pointer;
 	color:#ffffff;
 	font-family:Arial;
-	font-size:15px;
+	font-size:20px;
 	padding:6px 30px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #2f6627;
@@ -86,12 +86,9 @@ function findString (str) {
 
 <div>
 </div>
-<img width=200px height=200px src='https://github.com/yitzhakapps/yitzhakapps.github.io/blob/main/ICON/%D7%90%D7%95%D7%96%D7%A0%D7%99%D7%95%D7%AA%20%D7%98%D7%A8%D7%95%D7%A0%D7%A1%D7%9E%D7%90%D7%A8%D7%98.png?raw=true'/>
+<img width=150px height=150px src='https://github.com/yitzhakapps/yitzhakapps.github.io/blob/main/ICON/%D7%90%D7%95%D7%96%D7%A0%D7%99%D7%95%D7%AA%20%D7%98%D7%A8%D7%95%D7%A0%D7%A1%D7%9E%D7%90%D7%A8%D7%98.png?raw=true'/>
 
     <br> <br>
-<details>
-    <summary>הצג/הסתר פרטים נוספים...</summary>
-    <ul>
       <p><b>שם חבילה: </b> com.geekbuy.tronsmart
       <p><b>גודל קובץ:</b> 22 מ"ב
       <p><b>מס' גירסה:</b> 4.1.0
