--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@ function findString (str) {
 		
 <style>
 .myButton {
+        background-color:#44c767;
+	border-radius:9px;
+	border:2px solid #18ab29;
 	display:inline-block;
 	cursor:pointer;
 	color:#708090;
