--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@ function findString (str) {
 		
 <style>
 .myButton {
-        background-color:#44c767;
+        background-color:#708090;
 	border-radius:9px;
 	border:2px solid #18ab29;
 	display:inline-block;
 	cursor:pointer;
-	color:#708090;
+	color:white;
 	font-family:Arial;
 	font-size:30px;
 	padding:8px 45px;
