--- a/dexcom/Guide.html
+++ b/dexcom/Guide.html
@@ -9,7 +9,7 @@ body {
 }
 
 .collapsible {
-  background-color: #777;
+  background-color: #009688FF;
   color: white;
   cursor: pointer;
   padding: 18px;
@@ -52,7 +52,7 @@ body {
 
 
 <h2>מדריך שימוש באפליקציית Dexcom G6</h2>
-<p>מדריך מפורט על כל תהליך התחברות לדקסקום - החל מפתיחת החשבון וכולל הדרכה לחיבור ראשוני והפעלת סנסור פעיל / חדש</p>
+<p>הדרכה מפורטת - החל מפתיחת החשבון וכולל הדרכה לחיבור ראשוני והפעלת סנסור פעיל / חדש</p>
 <p>תודתנו נתונה לדוד חזן על ששיתף את המדריך לתועלת המשתמשים</p><br>
  
 <button class="collapsible">פתיחת חשבון בדקסקום</button>
