--- a/dexcom/Guide.html
+++ b/dexcom/Guide.html
@@ -3,6 +3,10 @@
 <head>
 <link href='https://fonts.googleapis.com/css?family=Rubik&display=swap' rel='stylesheet'>
 <meta charset="utf-8">
+<body>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+</body>
+ <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <style>
 body {
     font-family: 'Rubik';
@@ -52,7 +56,8 @@ body {
 
 
 <h2>מדריך שימוש באפליקציית Dexcom G6</h2>
-<p>הדרכה מפורטת - החל מפתיחת החשבון וכולל הדרכה לחיבור ראשוני והפעלת סנסור פעיל / חדש</p>
+<p>מדריך מפורט על כל תהליך התחברות לדקסקום</p>
+<p>החל מפתיחת החשבון וכולל הדרכה לחיבור ראשוני והפעלת סנסור פעיל / חדש</p>
 <p>תודתנו נתונה לדוד חזן על ששיתף את המדריך לתועלת המשתמשים</p><br>
  
 <button class="collapsible">פתיחת חשבון בדקסקום</button>
